Name:             bumper
Version:          0.5.0.3
Synopsis:         Automatically bump package versions, also transitively.
Description:      Automatically bump package versions, also transitively.
Author:           Silk
Copyright:        (c) 2012, Silk
Maintainer:       code@silkapp.com
Homepage:         http://github.com/silkapp/bumper
Category:         Development
License:          BSD3
License-File:     LICENSE
Cabal-Version:    >= 1.6
Build-Type:       Simple

Executable bumper
  Build-Depends:    base == 4.*
                  , Cabal        >= 1.6    && < 1.17
                  , containers   >= 0.4    && < 0.6
                  , fclabels     >= 1.0    && < 1.2
                  , process      >= 1.0    && < 1.2
                  , regex-compat >= 0.93   && < 0.96
                  , split        >= 0.1    && < 0.3
                  , strict       == 0.3.2
  GHC-Options:      -Wall
  HS-Source-Dirs:   src
  Main-is:          Bumper.hs
  Other-Modules:    Config
                    Package
                    Version

Source-Repository head
  Type:           git
  Location:       git://github.com/silkapp/bumper.git
