Name:             bumper
Version:          0.6.0.2
Synopsis:         Automatically bump package versions, also transitively.
Description:      Automatically bump package versions, also transitively.
                  .
                  Readme: <https://www.github.com/silkapp/bumper/blob/master/README.md>
Author:           Silk
Copyright:        (c) 2012, Silk
Maintainer:       code@silk.co
Homepage:         http://github.com/silkapp/bumper
Category:         Development
License:          BSD3
License-File:     LICENSE
Cabal-Version:    >= 1.6
Build-Type:       Simple

Extra-Source-Files: README.md
                    CHANGELOG.md

Executable bumper
  Build-Depends:    base == 4.*
                  , Cabal        >= 1.6    && < 1.22
                  , containers   >= 0.4    && < 0.6
                  , fclabels     >= 1.0    && < 2.1
                  , process      >= 1.0    && < 1.3
                  , regex-compat >= 0.93   && < 0.96
                  , split        >= 0.1    && < 0.3
                  , strict       == 0.3.2
  GHC-Options:      -Wall
  HS-Source-Dirs:   src
  Main-is:          Bumper.hs
  Other-Modules:    Config
                    Package
                    Version

Source-Repository head
  Type:           git
  Location:       git://github.com/silkapp/bumper.git
